refactor: update environment variables in .env.example files and Dockerfiles; adjust download.js to use QUEUE_PORT

--- a/scs-cloud-services/Hosting-container/.env.example
+++ b/scs-cloud-services/Hosting-container/.env.example
@@ -1,7 +1,7 @@
 # AWS Configuration
-MY_ACCESS_KEY_ID=your_aws_access_key_id
-MY_SECRET_ACCESS_KEY=your_aws_secret_access_key
-MY_BUCKET_NAME=your_s3_bucket_name
+MY_ACCESS_KEY_ID=my_access_key_id
+MY_SECRET_ACCESS_KEY=my_secret_access_key
+MY_BUCKET_NAME=my_bucket_name
 
 # Web Configuration
-WEB_URL=your_web_url
+WEB_URL=my_web_url
