--- a/scs-cloud-services/Transcoding-container/.env.example
+++ b/scs-cloud-services/Transcoding-container/.env.example
@@ -1,19 +1,20 @@
 # AWS Configuration
-MY_ACCESS_KEY_ID=your_aws_access_key_id
-MY_SECRET_ACCESS_KEY=your_aws_secret_access_key
-USER_ACCESS_KEY_ID=your_user_aws_access_key_id
-USER_SECRET_ACCESS_KEY=your_user_aws_secret_access_key
+MY_ACCESS_KEY_ID=my_access_key_id
+MY_SECRET_ACCESS_KEY=my_secret_access_key
+USER_ACCESS_KEY_ID=my_user_access_key_id
+USER_SECRET_ACCESS_KEY=my_user_secret_access_key
 
 # S3 Configuration
-MY_BUCKET_NAME=your_s3_bucket_name
-USER_BUCKET_NAME=your_user_bucket_name
-VIDEO_KEY=your_video_key
-BUCKET_PATH=your_bucket_path
+MY_BUCKET_NAME=my_bucket_name
+USER_BUCKET_NAME=my_bucket_name
+VIDEO_KEY=videos/my_video.mp4
+BUCKET_PATH=output/
 
 # User Information
-USER_EMAIL=your_user_email
+USER_EMAIL=my_user_email
 
 # Message Queue Configuration
-QUEUE_HOST=your_queue_host
-QUEUE_USER=your_queue_username
-QUEUE_PASSWORD=your_queue_password
+QUEUE_HOST=my_queue_host
+QUEUE_USER=default
+QUEUE_PASSWORD=my_queue_password
+QUEUE_PORT=19482
