--- a/scs-cloud-services/Transcoding-container/Dockerfile
+++ b/scs-cloud-services/Transcoding-container/Dockerfile
@@ -1,4 +1,4 @@
-FROM ubuntu
+FROM ubuntu:22.04
 
 RUN apt-get update
 RUN apt-get install -y curl
@@ -15,14 +15,14 @@ RUN npm install
 COPY main.sh main.sh
 COPY download.js download.js
 COPY outputs outputs
+# Convert Windows line endings to Unix line endings
+RUN sed -i 's/\r$//' main.sh
 
 RUN chmod +x main.sh
 RUN chmod +x download.js
 
 RUN mkdir -p outputs/1080p outputs/720p outputs/480p outputs/360p
 
-
-
-ENTRYPOINT [ "/home/app/main.sh" ]
+ENTRYPOINT ["/home/app/main.sh"]
 
 
