--- a/scs-cloud-services/Transcoding-container/.env.example
+++ b/scs-cloud-services/Transcoding-container/.env.example
@@ -8,7 +8,7 @@ USER_SECRET_ACCESS_KEY=my_user_secret_access_key
 MY_BUCKET_NAME=my_bucket_name
 USER_BUCKET_NAME=my_bucket_name
 VIDEO_KEY=videos/my_video.mp4
-BUCKET_PATH=output/
+BUCKET_PATH=outputs
 
 # User Information
 USER_EMAIL=my_user_email
