--- a/scsApiServer/.env.example
+++ b/scsApiServer/.env.example
@@ -13,6 +13,7 @@ SECRET_ACCESS_KEY_CREDENTIALS_SECRET=your_secret_access_key_credentials_secret
 ACCESS_KEY_ID=your_aws_access_key_id
 SECRET_ACCESS_KEY=your_aws_secret_access_key
 MY_BUCKET_NAME=your_s3_bucket_name
+BUCKET_HOST_FOR_HOSTING=your_s3_bucket_host_url
 
 # AWS ECS Configuration
 CLUSTER_ARN=your_ecs_cluster_arn
