refactor: enhance hosting service controller with improved error handling and streamlined logic

--- a/scsApiServer/.env.example
+++ b/scsApiServer/.env.example
@@ -14,6 +14,7 @@ ACCESS_KEY_ID=your_aws_access_key_id
 SECRET_ACCESS_KEY=your_aws_secret_access_key
 MY_BUCKET_NAME=your_s3_bucket_name
 BUCKET_HOST_FOR_HOSTING=your_s3_bucket_host_url
+HOSTING_DOMAIN=your_hosting_domain_name like example.com
 
 # AWS ECS Configuration
 CLUSTER_ARN=your_ecs_cluster_arn
