refactor: update queue service to use environment variable for port and streamline queue initialization

--- a/scsApiServer/.env.example
+++ b/scsApiServer/.env.example
@@ -31,6 +31,7 @@ MY_SECURITY_GROUP=your_security_group_id
 QUEUE_HOST=your_queue_host
 QUEUE_USER=your_queue_username
 QUEUE_PASSWORD=your_queue_password
+QUEUE_PORT=19481
 
 # Payment Gateway (Cashfree)
 CASHFREE_APP_KEY=your_cashfree_app_key
