--- a/scsApiServer/package.json
+++ b/scsApiServer/package.json
@@ -41,6 +41,7 @@
     "@types/mongoose": "^5.11.97",
     "@types/node": "^20.14.11",
     "@types/uuid": "^10.0.0",
+    "nodemon": "^3.1.10",
     "ts-node": "^10.9.2"
   }
 }
