refactor: add Docker Compose configuration and update environment variables for email server and API

--- a/emailServer/.env.example
+++ b/emailServer/.env.example
@@ -1,3 +1,7 @@
 # Email Configuration
 MY_EMAIL=your_email_address
 MY_PASSWORD=your_email_password
+QUEUE_HOST=your_queue_host
+QUEUE_PORT=your_queue_port
+QUEUE_USER=your_queue_user
+QUEUE_PASSWORD=your_queue_password
