--- a/scsApiServer/.env.example
+++ b/scsApiServer/.env.example
@@ -13,6 +13,7 @@ SECRET_ACCESS_KEY_CREDENTIALS_SECRET=your_secret_access_key_credentials_secret
 ACCESS_KEY_ID=your_aws_access_key_id
 SECRET_ACCESS_KEY=your_aws_secret_access_key
 MY_BUCKET_NAME=your_s3_bucket_name
+BUCKET_HOST_FOR_HOSTING=https://s3.ap-south-1.amazonaws.com/testingsuryansh.bucket/hosted-websites
 BUCKET_HOST_FOR_HOSTING=your_s3_bucket_host_url
 HOSTING_DOMAIN=your_hosting_domain_name like example.com
 
@@ -40,3 +41,6 @@ CASHFREE_APP_SECRET_KEY=your_cashfree_secret_key
 # Service Charges
 TRANSCODER_SERVICE_CHARGE=your_transcoder_service_charge
 HOSTING_SERVICE_CHARGE_PER_30_DAYS=your_hosting_service_charge
+
+# Web client origin(s) for CORS (comma-separated)
+CLIENT_ORIGIN=http://localhost:5173
