--- a/scscloud/package.json
+++ b/scscloud/package.json
@@ -14,6 +14,7 @@
     "@headlessui/react": "^2.1.2",
     "@heroicons/react": "^2.1.5",
     "@types/js-cookie": "^3.0.6",
+    "@types/react-syntax-highlighter": "^15.5.13",
     "axios": "^1.7.2",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
@@ -27,6 +28,8 @@
     "react-icons": "^5.2.1",
     "react-router-dom": "^6.21.3",
     "react-stripe-checkout": "^2.6.3",
+    "react-syntax-highlighter": "^16.0.0",
+    "refractor": "^5.0.0",
     "tailwind-merge": "^2.4.0",
     "tailwindcss-animate": "^1.0.7"
   },
