--- a/scsApiServer/package.json
+++ b/scsApiServer/package.json
@@ -15,6 +15,7 @@
     "@aws-sdk/client-ecs": "^3.616.0",
     "@aws-sdk/client-s3": "^3.614.0",
     "@aws-sdk/s3-request-presigner": "^3.616.0",
+    "@kubernetes/client-node": "^0.12.2",
     "axios": "^1.7.2",
     "bcrypt": "^5.1.1",
     "bullmq": "^5.10.3",
