--- a/k8s/api-server/svc.yaml
+++ b/k8s/api-server/svc.yaml
@@ -5,9 +5,9 @@ metadata:
   namespace:  scs-cloud
 spec:
   selector:
-    app:  scs-cloud-app
+    app:  scs-cloud-api-server
   type:  ClusterIP
   ports:
-  - name:  scs-cloud-app-port
+  - name:  scs-cloud-api-port
     port:  3000
     targetPort:  3000
