--- a/k8s/frontend/deployment.yaml
+++ b/k8s/frontend/deployment.yaml
@@ -1,29 +1,23 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name:  scs-cloud-frontend
-  namespace:  scs-cloud
+  name: scs-cloud-frontend
+  namespace: scs-cloud
   labels:
-    app:  scs-cloud-frontend
+    app: scs-cloud-frontend
 spec:
   replicas: 1
   selector:
     matchLabels:
-      app:  scs-cloud-frontend
+      app: scs-cloud-frontend
   template:
     metadata:
       labels:
-        app:  scs-cloud-frontend
+        app: scs-cloud-frontend
     spec:
       containers:
-      - image:  suryanshvermaaa/scs-cloud-frontend:1.0.0
-        name:  scs-cloud-frontend
-        ports:
-        - containerPort:  80
-          name:  scs-cloud-frontend-port
-        env:
-        - name: VITE_API_URL
-          valueFrom:
-            configMapKeyRef:
-              name: scs-cloud-frontend-config
-              key: VITE_API_URL
+        - name: scs-cloud-frontend
+          image: suryanshvermaaa/scs-cloud-frontend:1.0.0
+          ports:
+            - containerPort: 80
+              name: frontend-port
