--- a/scsApiServer/package.json
+++ b/scsApiServer/package.json
@@ -24,6 +24,7 @@
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
+    "groq-sdk": "^0.34.0",
     "http-proxy": "^1.18.1",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.5.1",
