--- a/scscloud/package.json
+++ b/scscloud/package.json
@@ -13,12 +13,14 @@
     "@cashfreepayments/cashfree-js": "^1.0.5",
     "@headlessui/react": "^2.1.2",
     "@heroicons/react": "^2.1.5",
+    "@tailwindcss/typography": "^0.5.19",
     "@types/js-cookie": "^3.0.6",
     "@types/react-syntax-highlighter": "^15.5.13",
     "axios": "^1.7.2",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "dotenv": "^16.4.5",
+    "highlight.js": "^11.11.1",
     "input-otp": "^1.2.4",
     "js-cookie": "^3.0.5",
     "lucide-react": "^0.414.0",
@@ -26,10 +28,11 @@
     "react-cookie": "^7.2.0",
     "react-dom": "^18.3.1",
     "react-icons": "^5.2.1",
+    "react-markdown": "^10.1.0",
     "react-router-dom": "^6.21.3",
     "react-stripe-checkout": "^2.6.3",
-    "react-syntax-highlighter": "^16.0.0",
-    "refractor": "^5.0.0",
+    "rehype-highlight": "^7.0.2",
+    "remark-gfm": "^4.0.1",
     "tailwind-merge": "^2.4.0",
     "tailwindcss-animate": "^1.0.7"
   },
