--- a/scscloud/package.json
+++ b/scscloud/package.json
@@ -27,6 +27,7 @@
     "react": "^18.3.1",
     "react-cookie": "^7.2.0",
     "react-dom": "^18.3.1",
+    "react-hot-toast": "^2.6.0",
     "react-icons": "^5.2.1",
     "react-markdown": "^10.1.0",
     "react-router-dom": "^6.21.3",
