fix: Update Ingress hosts to use production domain names

--- a/k8s/ingress.yaml
+++ b/k8s/ingress.yaml
@@ -8,7 +8,7 @@ metadata:
     app.kubernetes.io/part-of: scs-cloud
 spec:
   rules:
-  - host: localhost
+  - host: suryanshverma.live
     http:
       paths:
       - pathType: Prefix
@@ -18,7 +18,7 @@ spec:
             name: scs-cloud
             port:
               number: 80
-  - host: api.localhost
+  - host: api.suryanshverma.live
     http:
       paths:
       - pathType: Prefix
