--- a/scsApiServer/package.json
+++ b/scsApiServer/package.json
@@ -27,6 +27,7 @@
     "groq-sdk": "^0.34.0",
     "http-proxy": "^1.18.1",
     "jsonwebtoken": "^9.0.2",
+    "mime-types": "^3.0.1",
     "mongoose": "^8.5.1",
     "random-word-slugs": "^0.1.7",
     "razorpay": "^2.9.4",
@@ -40,6 +41,7 @@
     "@types/express": "^4.17.21",
     "@types/http-proxy": "^1.17.14",
     "@types/jsonwebtoken": "^9.0.6",
+    "@types/mime-types": "^3.0.1",
     "@types/mongoose": "^5.11.97",
     "@types/node": "^20.14.11",
     "@types/uuid": "^10.0.0",
