--- a/scsApiServer/.env.example
+++ b/scsApiServer/.env.example
@@ -1,46 +1,42 @@
-# Server Configuration
-PORT=8080
-MONGO_URI=your_mongodb_connection_string
+# Server
+PORT=3000
+MONGO_URI="<your_mongo_connection_string>"
+NODE_ENV="development"   # use "development" or "production"
+IS_UNDER_KUBERNETES="false"
 
-# JWT Tokens
-ACCESS_TOKEN_SECRET=your_access_token_secret
-REFRESH_TOKEN_SECRET=your_refresh_token_secret
-OTP_SECRET=your_otp_secret
-ACCESS_KEY_CREDENTIALS_SECRET=your_access_key_credentials_secret
-SECRET_ACCESS_KEY_CREDENTIALS_SECRET=your_secret_access_key_credentials_secret
+# Bot / 3rd-party APIs
+GROQ_API_KEY="<your_groq_api_key>"
 
-# AWS Configuration
-ACCESS_KEY_ID=your_aws_access_key_id
-SECRET_ACCESS_KEY=your_aws_secret_access_key
-MY_BUCKET_NAME=your_s3_bucket_name
-BUCKET_HOST_FOR_HOSTING=https://s3.ap-south-1.amazonaws.com/testingsuryansh.bucket/hosted-websites
-BUCKET_HOST_FOR_HOSTING=your_s3_bucket_host_url
-HOSTING_DOMAIN=your_hosting_domain_name like example.com
+# JWT / secrets
+ACCESS_TOKEN_SECRET="<your_access_token_secret>"
+REFRESH_TOKEN_SECRET="<your_refresh_token_secret>"
+OTP_SECRET="<your_otp_secret>"
+ACCESS_KEY_CREDENTIALS_SECRET="<your_access_key_credentials_secret>"
+SECRET_ACCESS_KEY_CREDENTIALS_SECRET="<your_secret_access_key_credentials_secret>"
 
-# AWS ECS Configuration
-CLUSTER_ARN=your_ecs_cluster_arn
-TRANSCODER_TASK_DEFINITION_ARN=your_transcoder_task_definition_arn
-HOSTER_TASK_DEFINITION_ARN=your_hoster_task_definition_arn
-TRANSCODER_TASK_NAME=your_transcoder_task_name
-HOSTER_TASK_NAME=your_hoster_task_name
-MY_SUBNET_1=your_subnet_1_id
-MY_SUBNET_2=your_subnet_2_id
-MY_SUBNET_3=your_subnet_3_id
-MY_SECURITY_GROUP=your_security_group_id
+# AWS credentials (use IAM user or role)
+ACCESS_KEY_ID="<your_aws_access_key_id>"
+SECRET_ACCESS_KEY="<your_aws_secret_access_key>"
+MY_BUCKET_NAME="<your_s3_bucket_name>"
+BUCKET_HOST_FOR_HOSTING="<your_s3_bucket_host_url_or_console_link>"
+HOSTING_DOMAIN="<your_hosting_domain>"
 
-# Message Queue Configuration
-QUEUE_HOST=your_queue_host
-QUEUE_USER=your_queue_username
-QUEUE_PASSWORD=your_queue_password
-QUEUE_PORT=19481
+# Message Queue (e.g., Redis)
+QUEUE_HOST="localhost"
+QUEUE_USER="default"
+QUEUE_PASSWORD="<your_queue_password>"
+QUEUE_PORT=6379
 
 # Payment Gateway (Cashfree)
-CASHFREE_APP_KEY=your_cashfree_app_key
-CASHFREE_APP_SECRET_KEY=your_cashfree_secret_key
+CASHFREE_APP_KEY="<your_cashfree_app_key>"
+CASHFREE_APP_SECRET_KEY="<your_cashfree_app_secret_key>"
 
-# Service Charges
-TRANSCODER_SERVICE_CHARGE=your_transcoder_service_charge
-HOSTING_SERVICE_CHARGE_PER_30_DAYS=your_hosting_service_charge
+# Service Charges (example defaults)
+TRANSCODER_SERVICE_CHARGE=0.25
+HOSTING_SERVICE_CHARGE_PER_30_DAYS=80
 
 # Web client origin(s) for CORS (comma-separated)
-CLIENT_ORIGIN=http://localhost:5173
+CLIENT_ORIGIN="http://localhost:5173"
+
+# Pricing
+STORAGE_PRICE_PER_GB_PER_MONTH_IN_RUPEES=15
