--- a/containerService/.env.example
+++ b/containerService/.env.example
@@ -1,3 +1,2 @@
-MONGO_URI="<your_mongo_uri_here>"
-NODE_ENV="development"
-ACCESS_TOKEN_SECRET="<your_access_token_secret_here>"
+DatabaseURL="<your_database_url_here>"
+PORT=3000
