feat: add gRPC service for container management
- Implemented gRPC service definitions in containerService.proto.
- Added TypeScript interfaces for gRPC requests and responses.
- Created build script to generate TypeScript types from .proto files.
- Updated Dockerfile to include necessary files for building the service.
- Added dependencies for gRPC and proto-loader in package.json.
- Updated .gitignore to exclude .vscode directory.

--- a/scsApiServer/Dockerfile
+++ b/scsApiServer/Dockerfile
@@ -4,7 +4,9 @@ WORKDIR /build
 
 COPY package*.json ./
 RUN npm install
+COPY containerService.proto containerService.proto
 COPY src/ src/
+COPY pb/ pb/
 COPY tsconfig.json tsconfig.json
 RUN npm run build
 
