--- a/k8s/namespace.yaml
+++ b/k8s/namespace.yaml
@@ -8,3 +8,9 @@ apiVersion: v1
 kind: Namespace
 metadata:
   name:  minio
+
+---
+apiVersion: v1
+kind: Namespace
+metadata:
+  name:  container-service
