--- a/scsApiServer/.env.example
+++ b/scsApiServer/.env.example
@@ -40,3 +40,7 @@ CLIENT_ORIGIN="http://localhost:5173"
 
 # Pricing
 STORAGE_PRICE_PER_GB_PER_MONTH_IN_RUPEES=15
+
+# Container Service (when running locally)
+CONTAINER_SERVICE_HOST=localhost
+CONTAINER_SERVICE_PORT=4000
