feat: update README for enhanced feature descriptions and organization; modify Dockerfile for container service build; update Kubernetes deployment configurations for various services

--- a/k8s/container-service/deployment.yaml
+++ b/k8s/container-service/deployment.yaml
@@ -18,7 +18,7 @@ spec:
       serviceAccountName: api-access
       containers:
       - name: scs-container-service
-        image: suryanshvermaaa/scs-container-service:1.0.0 # this needs to be updated with every new build
+        image: suryanshvermaaa/scs-container-service:1.0.0
         imagePullPolicy: Always
         ports:
         - containerPort: 4000
