feat: add HOSTING_DOMAIN environment variable to hosting worker deployment; rename database service to scs-container-db

--- a/k8s/hostingWorker/deployment.yaml
+++ b/k8s/hostingWorker/deployment.yaml
@@ -64,4 +64,9 @@ spec:
             secretKeyRef:
               name: scs-hw-secret
               key: QUEUE_PORT
+        - name: HOSTING_DOMAIN
+          valueFrom:
+            secretKeyRef:
+              name: scs-hw-secret
+              key: HOSTING_DOMAIN
   
